# path-sim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: basic_simulation.py  generate_chart.py  reproducible_run.py
pathsim/: __init__.py  cli.py  engine.py  factors.py  models.py  scoring.py
pathsim/analysis/: sensitivity.py
pathsim/llm/: explanation.py
pathsim/scenarios/: career_change.py  investment.py  startup.py
pathsim/simulation/: distributions.py  monte_carlo.py  outcome_model.py
pathsim/visualization/: charts.py
tests/: test_distributions.py  test_engine.py  test_monte_carlo.py  test_outcome_model.py  test_sensitivity.py
