[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsim"
version = "0.1.0"
description = "A local decision simulation engine using probabilistic modeling and Monte Carlo methods."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Narimane Berradj", email = "narimane.berradj@example.com" }
]
keywords = ["simulation", "monte-carlo", "decision-modeling", "probabilistic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.26",
    "rich>=13.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
llm = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/NarimaneBr/path-sim"
Documentation = "https://narimanebr.github.io/path-sim"
Repository = "https://github.com/NarimaneBr/path-sim"
Issues = "https://github.com/NarimaneBr/path-sim/issues"
Changelog = "https://github.com/NarimaneBr/path-sim/blob/main/CHANGELOG.md"

[project.scripts]
pathsim = "pathsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
